--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 <body>
     <canvas id="fireworksCanvas"></canvas>
-    <audio id="fireworkSound" src="firework-sound.mp3" preload="auto"></audio>
     <script>
         const canvas = document.getElementById('fireworksCanvas');
         const ctx = canvas.getContext('2d');
@@ -29,9 +28,6 @@
         const hearts = [];
         const textBarrage = [];
 
-        const fireworkSound = document.getElementById('fireworkSound');
-        fireworkSound.volume = 0.5;
-
         class Firework {
             constructor(x, targetY, color) {
                 this.x = x;
@@ -40,10 +36,23 @@
                 this.color = color;
                 this.speed = Math.random() * 1.7 + 2.1;
                 this.exploded = false;
+                this.tail = [];
+                this.wobble = Math.random() * 0.02 + 0.02;
+                this.angle = Math.random() > 0.5 ? 1 : -1;
             }
 
             update() {
+                this.tail.push({
+                    x: this.x + Math.sin(this.tail.length * this.wobble) * this.angle * 3,
+                    y: this.y,
+                });
+
+                if (this.tail.length > 20) {
+                    this.tail.shift();
+                }
+
                 this.y -= this.speed;
+
                 if (this.y <= this.targetY && !this.exploded) {
                     this.exploded = true;
                     this.explode();
@@ -51,6 +60,16 @@
             }
 
             draw() {
+                ctx.beginPath();
+                for (let i = 0; i < this.tail.length; i++) {
+                    const opacity = i / this.tail.length;
+                    ctx.globalAlpha = opacity;
+                    ctx.arc(this.tail[i].x, this.tail[i].y, 2, 0, Math.PI * 2);
+                    ctx.fillStyle = this.color;
+                    ctx.fill();
+                }
+                ctx.globalAlpha = 1;
+
                 if (!this.exploded) {
                     ctx.beginPath();
                     ctx.arc(this.x, this.y, 4, 0, Math.PI * 2);
@@ -60,15 +79,13 @@
             }
 
             explode() {
-                fireworkSound.currentTime = 0;
-                fireworkSound.play();
-
                 const particleCount = Math.random() * 80 + 120;
                 const spread = Math.PI * 2;
                 for (let i = 0; i < particleCount; i++) {
                     const angle = Math.random() * spread;
                     const speed = Math.random() * 2 + 1;
-                    particles.push(new Particle(this.x, this.y, this.color, angle, speed));
+                    const particleColor = this.color;
+                    particles.push(new Particle(this.x, this.y, particleColor, angle, speed));
                 }
             }
         }
@@ -91,12 +108,13 @@
             }
 
             draw() {
+                ctx.save();
                 ctx.globalAlpha = this.alpha;
                 ctx.beginPath();
                 ctx.arc(this.x, this.y, 2, 0, Math.PI * 2);
                 ctx.fillStyle = this.color;
                 ctx.fill();
-                ctx.globalAlpha = 1;
+                ctx.restore();
             }
         }
 
@@ -131,18 +149,20 @@
 
         function createFirework() {
             const colors = ['#FF1461', '#18FF92', '#5A87FF', '#FBF38C', '#FF5722', '#8E44AD'];
-            const x = Math.random() * canvas.width;
-            const targetY = Math.random() * canvas.height * 0.5 + 100;
-            const color = colors[Math.floor(Math.random() * colors.length)];
-            fireworks.push(new Firework(x, targetY, color));
+            for (let i = 0; i < 1; i++) {  // 减少烟花数量
+                const x = Math.random() * canvas.width;
+                const targetY = Math.random() * canvas.height * 0.5 + 100;
+                const color = colors[Math.floor(Math.random() * colors.length)];
+                fireworks.push(new Firework(x, targetY, color));
+            }
         }
 
         function createBarrageText() {
             const messages = ["跟着小胖混三天撑九顿"];
             const message = messages[Math.floor(Math.random() * messages.length)];
             const x = canvas.width;
-            const y = Math.random() * (canvas.height - 30);
-            const speed = Math.random() * 2 + 2;
+            const y = Math.random() * (canvas.height - 30);  // 随机 y 坐标
+            const speed = Math.random() * 2 + 2;  // 随机速度
             textBarrage.push({
                 text: message,
                 x: x,
@@ -153,21 +173,22 @@
         }
 
         function drawText() {
-            ctx.font = "30px Arial";
-            ctx.fillStyle = 'red';
             for (let i = 0; i < textBarrage.length; i++) {
                 const text = textBarrage[i];
+                ctx.font = "30px Arial";
+                ctx.fillStyle = text.color;
                 ctx.fillText(text.text, text.x, text.y);
-                text.x -= text.speed;
+                text.x -= text.speed; // 文字向左滚动
                 if (text.x < -ctx.measureText(text.text).width) {
-                    textBarrage.splice(i, 1);
-                    i--;
+                    textBarrage.splice(i, 1); // 移除已滚动出画布的文字
+                    i--; // 调整索引
                 }
             }
         }
 
         function animate() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = 'rgba(0, 0, 0, 0.5)';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
 
             fireworks.forEach((firework, index) => {
                 firework.update();
@@ -194,7 +215,8 @@
                 }
             });
 
-            drawText();
+            drawText();  // 绘制滚动的弹幕文字
+
             requestAnimationFrame(animate);
         }
 
@@ -208,8 +230,8 @@
             hearts.push(new Heart(x, y));
         });
 
-        setInterval(createFirework, 2000);
-        setInterval(createBarrageText, 1000);
+        setInterval(createFirework, 2000);  // 调整为更长时间间隔
+        setInterval(createBarrageText, 1000);  // 每秒生成一个弹幕
 
         animate();
 
